[gd_scene load_steps=5 format=3 uid="uid://c5obkqmabqwoh"]

[ext_resource type="PackedScene" uid="uid://c5evis4gxner6" path="res://userinterfaces/menu_button/menu_button.tscn" id="1_a81aj"]
[ext_resource type="Script" path="res://userinterfaces/settings_menu/save_menu/save_menu.gd" id="1_groun"]
[ext_resource type="Texture2D" uid="uid://b2sg2jn7eka81" path="res://assets/settings_menu/export.svg" id="2_2ntfm"]
[ext_resource type="Texture2D" uid="uid://x7ygossep1uj" path="res://assets/settings_menu/import.svg" id="3_tkqes"]

[node name="Save" type="HBoxContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -50.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_groun")

[node name="Export" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ExportFileDialog" type="FileDialog" parent="Export"]
position = Vector2i(0, 36)
size = Vector2i(647, 175)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.dat")
use_native_dialog = true

[node name="ExportButton" parent="Export" instance=ExtResource("1_a81aj")]
custom_minimum_size = Vector2(36, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_2ntfm")
texture_scale = 1.0

[node name="Import" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ImportConfirmationDialog" type="ConfirmationDialog" parent="Import"]
title = "Stop right there criminal scum"
size = Vector2i(360, 100)
dialog_text = "Importing will overwrite your current save file"

[node name="ImportFileDialog" type="FileDialog" parent="Import"]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(647, 175)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.dat")
use_native_dialog = true

[node name="ImportButton" parent="Import" instance=ExtResource("1_a81aj")]
custom_minimum_size = Vector2(36, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_tkqes")
texture_scale = 1.0

[connection signal="file_selected" from="Export/ExportFileDialog" to="." method="_on_export_file_dialog_file_selected"]
[connection signal="pressed" from="Export/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="confirmed" from="Import/ImportConfirmationDialog" to="." method="_on_import_confirmation_dialog_confirmed"]
[connection signal="file_selected" from="Import/ImportFileDialog" to="." method="_on_import_file_dialog_file_selected"]
[connection signal="pressed" from="Import/ImportButton" to="." method="_on_import_button_pressed"]
